--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -21,6 +21,12 @@ h3 {
   @include subtitle;
 }
 
+// #  <h4>
+
+// #  <h5>
+
+// #  <h6>
+
 /* -------------------------------------------------------------------------- *\
 -  Inline text elements
 \* -------------------------------------------------------------------------- */
@@ -28,6 +34,11 @@ h3 {
 // #  <p>
 p {
   @include text;
+
+  &::first-letter {
+    color: rgb(255, 0, 0);
+    font-size: $font-size--subtitle;
+  }
 }
 
 /* -------------------------------------------------------------------------- *\
