--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -14,6 +14,12 @@ h1 {
 // #  <h2>
 h2 {
   @include title;
+
+  + p::first-letter {
+    background-color: rgb(0, 255, 0);
+    color: rgb(255, 0, 0);
+    font-size: $font-size--subtitle;
+  }
 }
 
 // #  <h3>
@@ -34,11 +40,6 @@ h3 {
 // #  <p>
 p {
   @include text;
-
-  &::first-letter {
-    color: rgb(255, 0, 0);
-    font-size: $font-size--subtitle;
-  }
 }
 
 /* -------------------------------------------------------------------------- *\
