style-main: more styling v14

--- a/assets/styles/scss/abstracts/_mixins.scss
+++ b/assets/styles/scss/abstracts/_mixins.scss
@@ -6,6 +6,7 @@
 // -  Layout
 // -----------------------------------------------------------------------------
 
+// #  <section>
 @mixin section {
   min-width: $dimension-xxs;
   padding: $size-xxl;
