--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -16,6 +16,7 @@ h2 {
   @include title;
 
   + p::first-letter {
+    // This is purely as a test
     background-color: rgb(0, 255, 0);
     color: rgb(255, 0, 0);
     font-size: $font-size--subtitle;
@@ -34,37 +35,16 @@ h3 {
 // #  <h6>
 
 /* -------------------------------------------------------------------------- *\
--  Inline text elements
-\* -------------------------------------------------------------------------- */
-
-// #  <p>
-p {
-  @include text;
-}
-
-/* -------------------------------------------------------------------------- *\
--  Abbreviations
-\* -------------------------------------------------------------------------- */
-
-// #  <abbr>
-
-/* -------------------------------------------------------------------------- *\
--  Blockquotes
+-  Block Text Content
 \* -------------------------------------------------------------------------- */
 
 // #  <blockquote>
 
-// #  <q>
-
-// #  <cite>
+// #  <figcaption>
 
 // #  <figure>
 
-// #  <figcaption>
-
-/* -------------------------------------------------------------------------- *\
--  Lists
-\* -------------------------------------------------------------------------- */
+// #  <hr>
 
 // #  <li>
 
@@ -72,8 +52,33 @@ p {
 
 // #  <ul>
 
+// #  <p>
+p {
+  @include text;
+}
+
 /* -------------------------------------------------------------------------- *\
--  Other
+-  Inline Text Semantics
 \* -------------------------------------------------------------------------- */
 
-// #  <hr>
+// #  <a>
+
+// #  <abbr>
+
+// #  <cite>
+
+// #  <em>
+
+// #  <mark>
+
+// #  <q>
+
+// #  <small>
+
+// #  <span>
+
+// #  <sub>
+
+// #  <sup>
+
+// #  <time>
