--- a/assets/styles/scss/layout/_grid.scss
+++ b/assets/styles/scss/layout/_grid.scss
@@ -1,3 +1,3 @@
 /* -------------------------------------------------------------------------- *\
-*  _address.scss: This partial file contains all 'address' styles.
+*  _grid.scss: This partial file contains all 'grid' styles.
 \* -------------------------------------------------------------------------- */
