--- a/assets/styles/scss/components/_textarea.scss
+++ b/assets/styles/scss/components/_textarea.scss
@@ -1,3 +1,3 @@
 /* -------------------------------------------------------------------------- *\
-*  _progress-bars.scss: This partial file contains all 'progress-bars' styles.
+*  _button.scss: This partial file contains all 'button' styles.
 \* -------------------------------------------------------------------------- */
