--- a/assets/styles/scss/layout/_container.scss
+++ b/assets/styles/scss/layout/_container.scss
@@ -1,3 +1,3 @@
 /* -------------------------------------------------------------------------- *\
-*  _menu.scss: This partial file contains all 'menu' styles.
+*  _container.scss: This partial file contains all 'container' styles.
 \* -------------------------------------------------------------------------- */
