--- a/assets/styles/scss/layout/_form.scss
+++ b/assets/styles/scss/layout/_form.scss
@@ -1,3 +1,3 @@
 /* -------------------------------------------------------------------------- *\
-*  _general.scss: This partial file contains all 'general' styles.
+*  _form.scss: This partial file contains all 'form' styles.
 \* -------------------------------------------------------------------------- */
