--- a/assets/styles/scss/layout/_article.scss
+++ b/assets/styles/scss/layout/_article.scss
@@ -1,3 +1,7 @@
 /* -------------------------------------------------------------------------- *\
 *  _article.scss: This partial file contains all 'article' styles.
 \* -------------------------------------------------------------------------- */
+
+article {
+  @include article;
+}
