--- a/assets/styles/scss/layout/_aside.scss
+++ b/assets/styles/scss/layout/_aside.scss
@@ -1,3 +1,7 @@
 /* -------------------------------------------------------------------------- *\
 *  _aside.scss: This partial file contains all 'aside' styles.
 \* -------------------------------------------------------------------------- */
+
+aside {
+  @include aside;
+}
