--- a/assets/styles/scss/layout/_form.scss
+++ b/assets/styles/scss/layout/_form.scss
@@ -1,3 +1,7 @@
 /* -------------------------------------------------------------------------- *\
 *  _form.scss: This partial file contains all 'form' styles.
 \* -------------------------------------------------------------------------- */
+
+form {
+  @include form;
+}
