--- a/assets/styles/scss/layout/_table.scss
+++ b/assets/styles/scss/layout/_table.scss
@@ -1,3 +1,7 @@
 /* -------------------------------------------------------------------------- *\
 *  _table.scss: This partial file contains all 'table' styles.
 \* -------------------------------------------------------------------------- */
+
+table {
+  @include table;
+}
