--- a/assets/styles/scss/layout/_header.scss
+++ b/assets/styles/scss/layout/_header.scss
@@ -2,6 +2,10 @@
 *  _header.scss: This partial file contains all 'header' styles.
 \* -------------------------------------------------------------------------- */
 
+header {
+  @include header;
+}
+
 .topnav {
   overflow: hidden;
   background-color: #e9e9e9;
