--- a/assets/styles/scss/layout/_nav.scss
+++ b/assets/styles/scss/layout/_nav.scss
@@ -1,3 +1,7 @@
 /* -------------------------------------------------------------------------- *\
 *  _nav.scss: This partial file contains all 'nav' styles.
 \* -------------------------------------------------------------------------- */
+
+nav {
+  @include nav;
+}
