--- a/assets/styles/scss/layout/_section.scss
+++ b/assets/styles/scss/layout/_section.scss
@@ -1,3 +1,7 @@
 /* -------------------------------------------------------------------------- *\
 *  _section.scss: This partial file contains all 'section' styles.
 \* -------------------------------------------------------------------------- */
+
+section {
+  @include section;
+}
