--- a/assets/styles/scss/components/_card.scss
+++ b/assets/styles/scss/components/_card.scss
@@ -5,8 +5,17 @@
 .card {
   overflow: hidden;
   align-self: center;
-  margin: $size-sm;
+  margin: $size-s;
   background-color: aqua;
   border-radius: $border-radius;
   box-shadow: $box-shadow;
 }
+
+// -  <<----------<< Generic >>---------->>
+
+article {
+  @include article;
+  // ...
+}
+
+// -  <<----------<< Specific >>---------->>
