--- a/assets/styles/scss/layout/_footer.scss
+++ b/assets/styles/scss/layout/_footer.scss
@@ -2,9 +2,14 @@
 *  _footer.scss: This partial file contains all 'footer' styles.
 \* -------------------------------------------------------------------------- */
 
+// -  <<----------<< Generic >>---------->>
+
 footer {
   @include footer;
+  // ...
 }
+
+// -  <<----------<< Specific >>---------->>
 
 .footer {
   width: 100%;
