--- a/assets/styles/scss/layout/_nav.scss
+++ b/assets/styles/scss/layout/_nav.scss
@@ -2,6 +2,11 @@
 *  _nav.scss: This partial file contains all 'nav' styles.
 \* -------------------------------------------------------------------------- */
 
+// -  <<----------<< Generic >>---------->>
+
 nav {
   @include nav;
+  // ...
 }
+
+// -  <<----------<< Specific >>---------->>
