--- a/assets/styles/scss/layout/_section.scss
+++ b/assets/styles/scss/layout/_section.scss
@@ -2,6 +2,11 @@
 *  _section.scss: This partial file contains all 'section' styles.
 \* -------------------------------------------------------------------------- */
 
+// -  <<----------<< Generic >>---------->>
+
 section {
   @include section;
+  // ...
 }
+
+// -  <<----------<< Specific >>---------->>
