--- a/assets/styles/scss/layout/_table.scss
+++ b/assets/styles/scss/layout/_table.scss
@@ -2,6 +2,11 @@
 *  _table.scss: This partial file contains all 'table' styles.
 \* -------------------------------------------------------------------------- */
 
+// -  <<----------<< Generic >>---------->>
+
 table {
   @include table;
+  // ...
 }
+
+// -  <<----------<< Specific >>---------->>
