--- a/assets/styles/scss/layout/_article.scss
+++ b/assets/styles/scss/layout/_article.scss
@@ -2,6 +2,11 @@
 *  _article.scss: This partial file contains all 'article' styles.
 \* -------------------------------------------------------------------------- */
 
+// -  <<----------<< Generic >>---------->>
+
 article {
   @include article;
+  // ...
 }
+
+// -  <<----------<< Specific >>---------->>
