--- a/assets/styles/scss/abstracts/_mixins.scss
+++ b/assets/styles/scss/abstracts/_mixins.scss
@@ -69,6 +69,7 @@
   max-width: $max-width;
   height: 100%;
   max-height: $max-height;
+  padding: 0;
   margin: 0 auto;
 }
 
@@ -296,20 +297,30 @@
 // *  Box-Shadows
 // -----------------------------------------------------------------------------
 
-@mixin BoxShadowHelper($level: 1) {
-  & when ($level = 1) {
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+// #  Material Design Box-Shadow ---> https://gist.github.com/z-------------/ec2208959ff3620f80e5
+@mixin box-shadow($level: 1) {
+  // #  Box-Shadow Level 1
+  @if $level == 1 {
+    box-shadow: $box-shadow--level-1;
   }
-  & when ($level = 2) {
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  // #  Box-Shadow Level 2
+  @else if $level == 2 {
+    box-shadow: $box-shadow--level-2;
   }
-  & when ($level = 3) {
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  // #  Box-Shadow Level 3
+  @else if $level == 3 {
+    box-shadow: $box-shadow--level-3;
   }
-  & when ($level = 4) {
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  // #  Box-Shadow Level 4
+  @else if $level == 4 {
+    box-shadow: $box-shadow--level-4;
   }
-  & when ($level = 5) {
-    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+  // #  Box-Shadow Level 5
+  @else if $level == 5 {
+    box-shadow: $box-shadow--level-5;
+  }
+  // #  Invalid arguments!
+  @else {
+    @warn 'Box-shadow mixin supports: 1,2,3,4,5';
   }
 }
