--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -29,6 +29,16 @@ $dimension--xl: 120rem; // 1920px
 $dimension--xxl: 140rem; // 2240px
 
 // -  <<----------<< Shadow >>---------->>
+$box-shadow--level-1: 0 1px 3px rgba(0, 0, 0, 0.12),
+  0 1px 2px rgba(0, 0, 0, 0.24);
+$box-shadow--level-2: 0 3px 6px rgba(0, 0, 0, 0.16),
+  0 3px 6px rgba(0, 0, 0, 0.23);
+$box-shadow--level-3: 0 10px 20px rgba(0, 0, 0, 0.19),
+  0 6px 6px rgba(0, 0, 0, 0.23);
+$box-shadow--level-4: 0 14px 28px rgba(0, 0, 0, 0.25),
+  0 10px 10px rgba(0, 0, 0, 0.22);
+$box-shadow--level-5: 0 19px 38px rgba(0, 0, 0, 0.3),
+  0 15px 12px rgba(0, 0, 0, 0.22);
 
 // -  <<----------<< Border >>---------->>
 $border-radius: $size--s; // 16px
