--- a/assets/styles/scss/components/_icon.scss
+++ b/assets/styles/scss/components/_icon.scss
@@ -2,6 +2,10 @@
 *  _icon.scss: This partial file contains all 'icon' styles.
 \* -------------------------------------------------------------------------- */
 
+// -  <<----------<< Generic >>---------->>
+
 svg {
   fill: var(--foreground-color);
 }
+
+// -  <<----------<< Specific >>---------->>
