--- a/assets/styles/scss/components/_switch.scss
+++ b/assets/styles/scss/components/_switch.scss
@@ -2,6 +2,12 @@
 *  _toggle.scss: This partial file contains all 'toggle' styles.
 \* -------------------------------------------------------------------------- */
 
+// -  <<----------<< Generic >>---------->>
+
+// ...
+
+// -  <<----------<< Specific >>---------->>
+
 .theme-switch-wrapper {
   display: flex;
   align-items: center;
