--- a/assets/styles/scss/abstracts/_mixins.scss
+++ b/assets/styles/scss/abstracts/_mixins.scss
@@ -298,7 +298,7 @@
 // *  Box-Shadows
 // -----------------------------------------------------------------------------
 
-// #  Material Design Box-Shadow ---> https://gist.github.com/z-------------/ec2208959ff3620f80e5
+// #  Material Design Box-Shadow
 @mixin box-shadow($level: 1) {
   // #  Box-Shadow Level 1
   @if $level == 1 {
