style-main: more styling v23

--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -72,6 +72,7 @@ $color--subject: var(--primary-color);
 $color--title: var(--secondary-color);
 $color--subtitle: var(--tertiary-color);
 $color--text: var(--foreground-color);
+$color--background: var(--background-color);
 
 // -  <<----------<< RFS >>---------->>
 
